--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,9 @@ main {
 main img {
     width: 150px;
     height: auto;
+    border: 1px solid black;
+    padding: 3px;
+    box-shadow: 0 0 30px gray;
 }
 
 img {
