--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav {
     background-color: darkblue;
     padding: 10px;
+    position: relative;
 }
 
 nav a {
     color: white;
-    display: block;
+    display: inline;
     padding: 20px;
 }
 
@@ -23,6 +30,7 @@ main img {
     border: 1px solid black;
     padding: 3px;
     box-shadow: 0 0 30px gray;
+    float: right;
 }
 
 img {
@@ -50,10 +58,28 @@ aside {
 aside img {
     width: 200px;
     height: auto;
+    text-align: center;
+}
+
+aside h2 {
+    position: absolute;
+    top: 27;
+    left: 150px;
+
 }
 
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
 }
