--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 :root {
     --primary-color: #055a05;
-    --secondary-color: #f4a261;
-    --accent1-color: rgb(5, 32, 119);
-    --accent2-color: #e9c46a;
+    --secondary-color: #f46161;
+    --accent1-color: rgb(81, 100, 243);
+    --accent2-color: black;
     --heading-font: "Times New Roman", "Georgia", serif;
     --body-font: Arial, sans-serif;
 }
@@ -56,7 +56,7 @@ section h2 {
     padding: 10px;
 }
 
-.socials a {
+.socialmedia a {
     text-decoration: none;
 }
 
@@ -81,12 +81,11 @@ h1 {
     color: white;
 }
 
-article {
-    background-color: var(--accent1-color);
-    opacity: 0.75;
+.hero article {
+    opacity: 0.9;
     color: white;
     position: absolute;
-    top: 360px;
+    top: 380px;
     padding-top: 5px;
 }
 
@@ -103,4 +102,14 @@ footer nav {
 
 footer p {
     text-align: center;
+}
+
+footer nav img {
+    width: 30px;
+    height: auto;
+}
+
+header img {
+    width: 100px;
+    height: auto;
 }
