--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+header,
+.grid,
+footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -11,17 +18,22 @@ nav {
 }
 
 nav a {
+    display: block;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-decoration: none;
     color: white;
-    display: inline;
-    padding: 20px;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 h1 {
     color: darkblue;
-}
-
-main {
-    max-width: 840px;
 }
 
 main img {
@@ -53,18 +65,21 @@ aside {
     background-color: #eee;
     color: black;
     text-align: center;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
     width: 200px;
     height: auto;
     text-align: center;
+    margin-top: 2rem;
 }
 
 aside h2 {
     position: absolute;
-    top: 27;
-    left: 150px;
+    left: 90px;
 
 }
 
@@ -82,4 +97,14 @@ footer {
     padding: 1rem;
     background-color: #ddd;
     color: #000;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
 }
