--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+header {}
+
 header,
 .grid,
 footer {
@@ -28,8 +30,9 @@ nav a {
 
 nav ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+
 }
 
 h1 {
@@ -107,4 +110,16 @@ footer {
 main {
     grid-column: 2/3;
     margin: 1rem;
+}
+
+h1 {
+    border-bottom: 2px solid #777;
+}
+
+.box a {
+    display: block;
+    padding: 0.2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-decoration: none;
 }
