--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -9,6 +9,7 @@
 header {
     background-color: white;
     color: var(--accent2-color);
+
 }
 
 * {
@@ -27,7 +28,7 @@ header,
 main,
 footer {
     width: 840px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 h1,
@@ -38,13 +39,21 @@ h2 {
 
 nav a {
     text-decoration: none;
+    color: black;
+}
 
+nav ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    padding: 1rem;
+    color: white;
 }
 
 nav,
 p,
 section {
-    margin: 16px;
+    margin: 10px;
     padding: 8px;
 }
 
@@ -52,7 +61,7 @@ section h2 {
     text-align: center;
     background-color: var(--accent1-color);
     color: white;
-    padding: 10px;
+    padding: 5px;
 }
 
 .socialmedia a {
@@ -84,7 +93,7 @@ h1 {
     opacity: 0.9;
     color: black;
     position: absolute;
-    top: 360px;
+    top: 24rem;
     padding-top: 5px;
     background-color: white;
 }
@@ -112,4 +121,33 @@ footer nav img {
 header img {
     width: 100px;
     height: auto;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.history-grid img {
+    width: 300px;
+    height: auto;
+}
+
+.history-grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    margin: 1rem;
+}
+
+.adventure-grid {
+    max-width: 840px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.adventure-grid img {
+    width: 140px;
+    height: auto;
+    margin: 0.5rem;
+
 }
